intTests/test_optional_args/args006.log.good
Loading file "args006.saw"
plop quack
plop honk
Type errors:
  args006.saw:13:13-13:17: Error: Mismatched named parameters.
    Missing from String -> String:
       t : String
    Expected: String -> String
    Found:    String -> t?String -> String

  args006.saw:4:14-4:30: Note: The type String -> String arises from this type annotation
  args006.saw:6:25-6:39: Note: The type String -> t?String -> String arises from the context of the term


FAILED
